--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -89,18 +89,21 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
     <div class="row" style="background-color:rgba(255,255,255,0.247059);">
         <div class="col-md-4">
             <a href="">
-                <img src="~/Octagon/assets/img/1.jpg" id="team" /> <h2 style="color:rgb(129,124,124);">TEAM</h2> <p>&nbsp;</p>
+                <img src="~/Octagon/assets/img/1.jpg" id="team" /> 
+                <!--<h2 style="color:rgb(129,124,124);">TEAM</h2> <p>&nbsp;</p>-->
             </a>
         </div>
 
         <div class="col-md-4">
             <a href="">
-                <img src="~/Octagon/assets/img/2.jpg" id="vision" style="color:rgb(129,124,124);" /><h2 style="color:rgb(129,124,124);">VISION</h2> <p>&nbsp;</p>
+                <img src="~/Octagon/assets/img/2.jpg" id="vision" style="color:rgb(129,124,124);" />
+                <!--<h2 style="color:rgb(129,124,124);">VISION</h2> <p>&nbsp;</p>-->
             </a>
         </div>
         <div class="col-md-4">
             <a href="">
-                <img src="~/Octagon/assets/img/3.jpg" id="innovation" /> <h2 style="color:rgb(129,124,124);">INNOVATION</h2> <p>&nbsp;</p>
+                <img src="~/Octagon/assets/img/3.jpg" id="innovation" /> 
+                <!--<h2 style="color:rgb(129,124,124);">INNOVATION</h2> <p>&nbsp;</p>-->
             </a>
         </div>
     </div>
