--- a/OctagonPlatform/Views/Partners/Search.cshtml
+++ b/OctagonPlatform/Views/Partners/Search.cshtml
@@ -9,10 +9,10 @@
            <td>@item.Mobile</td>
            <td>@item.Email</td>
            <td>@item.Status</td>
-           <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-           <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id},
+           <td><i class="fa fa-pencil"style="font-size:16px;color:darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+           <td><i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new {id = item.Id},
                                                             new {onclick = "return confirm('Are sure wants to delete?');"})</td>
-           <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
+           <td><i class="class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new {id = item.Id})</td>
        </tr>
    }
 
