Headers changed, navbar fixed top

--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -4,8 +4,13 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+<br />
+<br />
+<br />
+<br />
+<br />
 <div class="container">
-    <h3> List of Partners</h3>
+    <h1 class="page-header">List of Partners</h1>
     @Html.ActionLink(
         linkText: "Add Partner",
         actionName: "Create",
