--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -4,9 +4,14 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+<br />
+<br />
+<br />
+<br />
+<br />
 <div class="container">
     <div class="buttonterminal">
-    <h3>Terminals</h3>
+    <h1 class="page-header">Terminals</h1>
     @Html.ActionLink(
         linkText: "Add Terminal",
         actionName: "Create",
