Br's added to partner detail model

--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -3,9 +3,12 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<br><br/>
-<h3>Partner: <strong class="alert-link">@Model.BusinessName</strong></h3>
-<hr />
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<h1 class="page-header">@Model.BusinessName</h1>
 <div class="rowDetail">
     <div class="col-md-4">
         <div class="panel-group" style="width: 100%;">
