--- a/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
+++ b/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h3 class="alert-info">Edit Surcharge</h3>
+<h3 class="alert-info">Surcharge</h3>
 
 
 @using (Html.BeginForm("Save", "Surcharge", FormMethod.Post))
