--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -17,7 +17,7 @@
                     <h3 class="texth3"><i class="fa fa-pie-chart" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("General Info", "GeneralInfo", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getGeneralInfo", LoadingElementId = "loading1", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getGeneralInfo" })</h3>
 
                     <div id="getGeneralInfo" class="panel-collapse collapse">
-                        <img id="loading1" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <div class="panel-heading">
                    <h3 class="texth3"><i class="fa fa-list" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Contacts", "Contacts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getContacts", LoadingElementId = "loading2", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getContacts" })</h3>
                     <div id="getContacts" class="panel-collapse collapse">
-                        <img id="loading2" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <h3 class="texth3"><i class="fa fa-group" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Partners", "Partners", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getPartners", LoadingElementId = "loading3", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getPartners" })</h3>
 
                     <div id="getPartners" class="panel-collapse collapse">
-                        <img id="loading3" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <h3 class="texth3"><i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Bank Accounts", "BankAccounts", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getBankAccounts", LoadingElementId = "loading4", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getBankAccounts" })</h3>
 
                     <div id="getBankAccounts" class="panel-collapse collapse">
-                        <img id="loading4" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <h3 class="texth3"><i class="fa fa-desktop" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Terminals", "Terminals", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getTerminals", LoadingElementId = "loading5", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getTerminals" })</h3>
 
                     <div id="getTerminals" class="panel-collapse collapse">
-                        <img id="loading5" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,8 @@
                     <h3 class="texth3"><i class="fa fa-male" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Users", "Users", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getUsers", LoadingElementId = "loading6", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getUsers" })</h3>
 
                     <div id="getUsers" class="panel-collapse collapse">
-                        <img id="loading6" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                        <div class="loader"></div>
+                        <!-- <img id="loading6" style="display:none" src="~/Content/loading_icon.gif" alt="" />-->
                     </div>
                 </div>
             </div>
