Footer Section created. Footer section  added to Layouts (AdminSB, Dashboard, Octagon)

--- a/OctagonPlatform/Views/Shared/_LayoutAdminSB.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutAdminSB.cshtml
@@ -11,14 +11,15 @@
     <div id="page-wrapper">
         @RenderBody()
     </div>
+    @Html.Partial("Sections/Footer")
     <!-- /#page-wrapper -->
 </div>
 <!-- /#wrapper -->
     
     
-  
 @Html.Partial("Sections/Scripts")
 @RenderSection("scripts", required: false)
 
 </body>
+
 </html>
