--- a/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
@@ -11,12 +11,10 @@
         <div id="page-wrapper">
             @RenderBody()
         </div>
+        @Html.Partial("Sections/Footer")
         <!-- /#page-wrapper -->
     </div>
     <!-- /#wrapper -->
-
-
-
     @Html.Partial("Sections/Scripts")
     @* @RenderSection("scripts", required: false)*@
 </body>
