--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -62,10 +62,7 @@ a {
     height: 50px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
-    
-    
-   
-    margin: 10% 0 0 0;
+    margin: 10% 50% 50% 45%;
 }
 
 
