--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -8,7 +8,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
     <!-- /.navbar-header -->
     <div class="row">
-        <div class="col-md-3 ">
+        <div class="col-md-3" >
 
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,30 +17,39 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
-                <p>&nbsp;</p>
+                <a class="" href="#"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
                 <p>&nbsp;</p>
             </div>
         </div>
         <div class="col-md-6" style="text-align:center;">
-            <h5>
-                <a href="#"> 
-                    <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD: </a> 
-                <a></a>USD @Session["BTC"] &nbsp;&nbsp;&nbsp;
-                <a href="#">
-                    <img src="~/Octagon/assets/img/eth-16x16.png">
-                    <i style="font-size: 20px"></i>ETH/USD:
-                </a> 
-                <a></a>USD @Session["ETH"] &nbsp;&nbsp;&nbsp;
-                <a href="#">
-                    <img src="~/Octagon/assets/img/ltc-16x16.png">
-                    <i style="font-size: 20px"></i>LTC/USD:
-                </a> 
-                <a></a>USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
-            </h5>
+
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <a href="#">
+                        <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD:
+                    </a>
+                    USD @Session["BTC"] &nbsp;&nbsp;&nbsp;
+
+                </div>
+                <div class="col-md-4">
+
+                    <a href="#">
+                        <img src="~/Octagon/assets/img/eth-16x16.png">
+                        <i style="font-size: 20px"></i>ETH/USD:
+                    </a>
+                    USD @Session["ETH"] &nbsp;&nbsp;&nbsp;
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <a href="#">
+                        <img src="~/Octagon/assets/img/ltc-16x16.png">
+                        <i style="font-size: 20px"></i>LTC/USD:
+                    </a>
+                    USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
+                </div>
+            </div>
             <h1>@Session["businessName"].ToString()</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-12">
 
 
             <ul class="nav navbar-top-links navbar-right">
