mostrando las ignore hours de terminal config

--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -5,7 +5,7 @@
     <tr class="info">
 
         <th data-toggle="collapse" data-target="#demo">
-            Inactive Period:
+            Inactive Period: @Model.IgnoreHoursInactive
             <div id="demo" class="collapse">
                 <table>
                     <tbody>
