--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<OctagonPlatform.Models.Terminal>
+﻿@using System.Web.Http.Tracing
+@model IEnumerable<OctagonPlatform.Models.Terminal>
 
 @{
     ViewBag.Title = "Index";
@@ -11,49 +12,26 @@
 <br />
 <div class="container">
     <div class="buttonterminal">
-    <h1 class="page-header">Terminals</h1>
-    @Html.ActionLink(
-        linkText: "Add Terminal",
-        actionName: "Create",
-        controllerName: "Terminals",
-        routeValues: new
-        {
-            partnerId = int.Parse(Session["partnerId"].ToString())
-        },
-        htmlAttributes: new {@class= "btn btn-primary" }
-        )
-        </div>
-    <hr>
-    @*
-<nav class="navbar navbar-default"> 
-    <div class="container-fluid">
-        
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active">@Html.ActionLink(
-                                       linkText: "Add Terminal",
-                                       actionName: "Create",
-                                       controllerName: "Terminals",
-                                       routeValues: new
-                                       {
-                                           partnerId = int.Parse(Session["partnerId"].ToString())
-                                       },
-                                       htmlAttributes: null
-                                       )</li>
-            </ul>
-            <div class="form-group">
-                <input type="text" class="form-control" id="searchTerminal" placeholder="Search" name="search" />
-            </div> 
-        </div>
+        <h1 class="page-header">Terminals</h1>
+        @Html.ActionLink(
+            linkText: "Add Terminal",
+            actionName: "Create",
+            controllerName: "Terminals",
+            routeValues: new
+            {
+                partnerId = int.Parse(Session["partnerId"].ToString())
+            },
+            htmlAttributes: new {@class= "btn btn-primary" }
+            )
     </div>
-</nav>
-*@
+    <hr>
+
     <div class="alert-info">
         <strong>@ViewBag.Error</strong>
     </div>
     
     <table id="terminals" class="table table-striped table-bordered">
-    <thead>
+        <thead>
         <tr>
             <th>ID</th>
             <th>Partner</th>
@@ -70,9 +48,9 @@
             <th>Details</th>
 
         </tr>
-    </thead>
+        </thead>
     
-    <tbody id="listOfTerminals">
+        <tbody id="listOfTerminals">
 
         @foreach (var item in Model)
         {
@@ -88,7 +66,7 @@
                 <td>@if (item.Status.ToString().Equals("Active"))
                     {
                         <strong class="text-success">
-                                @item.Status
+                            @item.Status
                         </strong>
                     }
                     else if (item.Status.ToString().Equals("Inactive"))
@@ -114,18 +92,26 @@
                         <p>$@item.Balance</p>
                     }
                 </td>
-                <td><i class="fa fa-pencil"style="font-size:16px;color:darkblue"></i> @Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
                 <td>
-                    <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                                                 
+                    <i class="fa fa-pencil"style="font-size: 16px; color: darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
+                </td>
+                <td>
+                  @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
+                    
+                    <button type="button" value ="@item.Id" id="deleteItem" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#DeleteTerminalModal" >Delete</button>
+                    
+                    
                 </td>
                 <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td>
             </tr>
         }
         </tbody>
 
-</table>
+    </table>
 </div>
+
+@Html.Partial("DeleteTerminalModal")
+
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
@@ -133,11 +119,18 @@
 
         var jQuery_1_10_2 = $.noConflict(true);
 
-        jQuery_1_10_2(function () {
+        jQuery_1_10_2(function() {
             $("#terminals").DataTable();
         });
     </script>
 
-
+    <script>
+        $(document).ready(function() {
+            $("#confirm").click(function() {
+                var id = $("#deleteItem").val();
+                $("#itemId").val(id);
+            });
+        });
+    </script>
 }
 
