Button "Delete" styled in Terminals Index. Added new folder for Modals

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -96,11 +96,9 @@
                     <i class="fa fa-pencil"style="font-size: 16px; color: darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
                 </td>
                 <td>
-                  @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
-                    
-                    
+                  @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@              
 
-                    <button type="button" value ="@item.Id" id="deleteItem" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#DeleteTerminalModal" >Delete</button>
+                    <i class="fa fa-trash"style="font-size:16px;color:red"></i><button type="button" value ="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal" >Delete</button>
                     
                     
                 </td>
@@ -112,7 +110,7 @@
     </table>
 </div>
 
-@Html.Partial("DeleteTerminalModal")
+@Html.Partial("Modals/DeleteTerminalModal")
 
 @section Scripts {
     @Scripts.Render("~/bundles/search")
