--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -8,20 +8,22 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
     <!-- /.navbar-header -->
     <div class="row">
-        <div class="col-md-3" >
+        <div class="col-md-2" >
 
-            <div class="navbar-header">
+            
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <div style="padding-top: 5px;padding-left: 55px;">
                 <a class="" href="#"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
+                </div>
                 <p>&nbsp;</p>
-            </div>
+            
         </div>
-        <div class="col-md-6" style="text-align:center;">
+        <div class="col-md-7" style="text-align:center;">
 
             <div class="row">
                 <div class="col-md-4 col-sm-12">
