--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -21,12 +21,11 @@
                 <a class="" href="#"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
                 </div>
                 <p>&nbsp;</p>
-            
         </div>
-        <div class="col-md-7" style="text-align:center;">
+        <div class="col-md-8" style="text-align:center;">
 
             <div class="row">
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4">
                     <a href="#">
                         <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD:
                     </a>
@@ -41,7 +40,7 @@
                     </a>
                     USD @Session["ETH"] &nbsp;&nbsp;&nbsp;
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4">
                     <a href="#">
                         <img src="~/Octagon/assets/img/ltc-16x16.png">
                         <i style="font-size: 20px"></i>LTC/USD:
@@ -51,7 +50,7 @@
             </div>
             <h1>@Session["businessName"].ToString()</h1>
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-2">
 
 
             <ul class="nav navbar-top-links navbar-right">
