--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -98,7 +98,7 @@
                 <td>
                   @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@              
 
-                    <i class="fa fa-trash"style="font-size:16px;color:red"></i><button type="button" value ="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal" >Delete</button>
+                    <i class="fa fa-trash"style="font-size:16px;color:red"></i><button type="button" style="margin: -2px;" value ="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
                     
                     
                 </td>
