--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -25,7 +25,7 @@
         <div class="col-md-8" style="text-align:center;">
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-top: 5px;">
                     <a href="#">
                         <i class="fa fa-btc fa-fw" style="font-size:20px"></i>BTC/USD:
                     </a>
