Delete Terminal Modal Added

--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -93,20 +93,25 @@
                     <td>@item.Mobile</td>
                     <td>@item.Email</td>
                     <td>@item.Status</td>
-                    <td><i class="fa fa-pencil" style="font-size:16px;color:darkblue";></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-                    <td><i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    <td>
+                        <i class="fa fa-pencil" style="font-size: 16px; color: darkblue";></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
                     </td>
-                    <td><i class="fa fa-list" style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new {id = item.Id})</td>
-
-
+                    <td>
+                      @*  <i class="fa fa-trash"style="font-size: 16px; color: red"></i> @Html.ActionLink("Delete", "Delete", new {id = item.Id}) *@
+                        <i class="fa fa-trash"style="font-size:16px;color:red"></i><button type="button" style="margin: -2px;" value ="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeletePartner">Delete</button>
+                    </td>
+                    <td>
+                        <i class="fa fa-list" style="font-size: 16px; color: green"></i> @Html.ActionLink("Details", "Details", new {id = item.Id})
+                    </td>
                 </tr>
             }
-        }
-    
-    
+        }   
     </tbody>
     </table>     
-</div>       
+</div>   
+
+@Html.Partial("Modals/DeletePartner")
+    
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
@@ -118,7 +123,15 @@
             $("#partners").DataTable();
         });
     </script>
-
+    
+    <script>
+        $(document).ready(function() {
+            $("#confirm").click(function() {
+                var id = $("#deleteItem").val();
+                $("#itemId").val(id);
+            });
+        });
+    </script>
    
 }
 
