Lumen css added, create terminal styled

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Web.Http.Tracing
 @model IEnumerable<OctagonPlatform.Models.Terminal>
+@Styles.Render("~/Content/bootstrap-lumen.css") 
 
 @{
     ViewBag.Title = "Index";
