--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -1,8 +1,11 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
+
+@Styles.Render("~/Content/bootstrap-lumen.css")
+
+
 <br />
 <br />
 <br />
