--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -1,14 +1,23 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalFormViewModel
+@Styles.Render("~/Content/bootstrap-lumen.css") 
 
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+
+
+<br/>
+<br />
+<br />
+<br />
+<br />
+
 <div class="alingleft">
-    <br><br/>
+    <br><br />
     <h3>Create Terminal</h3>
     <hr>
-    @using (Html.BeginForm("Create", "Terminals"))
+    @using (Html.BeginForm("Create", "Terminals", FormMethod.Post, new {@class="form-horizontal"}))
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
@@ -189,14 +198,272 @@
             </div>
         </div>
         <div class="form-group">
-            
-                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary">Save</button>
-            
+
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+
         </div>
     }
-    </div>
+</div>    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+        @Scripts.Render("~/bundles/xpopulate")
+    }
+
+
+
+
+@*
+    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+<div>
+    @using (Html.BeginForm("Create", "Terminals", FormMethod.Post, new {@class = "form-horizontal"}))
+    {
+        @Html.AntiForgeryToken()
+        <p class="alert alert-warning">
+            All fields are <strong>required.</strong>
+            @ViewBag.Error
+            @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new {@class = "text-danger"})
+        </p>
+        <div class="form-group">
+            @Html.LabelFor(m => m.PartnerId, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.PartnerId)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Status, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.EnumDropDownListFor(m => m.Status, "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.Status)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Address1, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Address1, new {@class = "form-control", placeholder = "124 SW 105 Ave"})
+                @Html.ValidationMessageFor(m => m.Address1)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Address2, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Address2, new {@class = "form-control", autofocus = "autofocus", placeholder = "Apto 203"})
+                @Html.ValidationMessageFor(m => m.Address2)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Zip, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Zip, new {@class = "form-control", autofocus = "autofocus", placeholder = "33181"})
+                @Html.ValidationMessageFor(m => m.Zip)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.LocationTypeId, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.DropDownListFor(m => m.LocationTypeId, new SelectList(Model.LocationTypes, "Id", "Name"), "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.LocationTypeId)
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">Country</label>
+            <div class="col-lg-10">
+                <select required id="CountryId" name="CountryId" class="form-control">
+                    <option value="231">United States</option>
+                    @foreach (var item in Model.Countries)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.CountryId)
+                <div>
+                    <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">State</label>
+            <div class="col-lg-10">
+                <select required id="StatesId" name="StateId" class="form-control">
+                    <option value="3930">Florida</option>
+                    @foreach (var item in Model.States)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.StateId)
+                <div>
+                    <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">City</label>
+            <div class="col-lg-10">
+                <select required id="CitiesId" name="CitiesId" class="form-control">
+                    <option value="43769">Miami</option>
+                    @foreach (var item in Model.States)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.CityId)
+                <div>
+                    <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Phone, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Phone, new {@class = "form-control", autofocus = "autofocus", placeholder = "(786) 555 5555"})
+                @Html.ValidationMessageFor(m => m.Phone)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.MakeId, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.DropDownListFor(m => m.MakeId, new SelectList(Model.Makes, "Id", "Name"), "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.MakeId)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ModelId, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.DropDownListFor(m => m.ModelId, new SelectList(Model.Models, "Id", "Name"), "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.ModelId)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.CommunicationType, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.EnumDropDownListFor(m => m.CommunicationType, "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.CommunicationType)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.EmvReady, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.EmvReady, new {@class = "form-control", autofocus = "autofocus"})
+                @Html.ValidationMessageFor(m => m.EmvReady)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.MachineSerialNumber, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.MachineSerialNumber, new {@class = "form-control", autofocus = "autofocus", placeholder = "1117060030"})
+                @Html.ValidationMessageFor(m => m.MachineSerialNumber)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.VeppSerialNumber, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.VeppSerialNumber, new {@class = "form-control", autofocus = "autofocus", placeholder = "1117060030"})
+                @Html.ValidationMessageFor(m => m.VeppSerialNumber)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.SoftwareVersion, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.SoftwareVersion, new {@class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1"})
+                @Html.ValidationMessageFor(m => m.SoftwareVersion)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FimwareVersion, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.FimwareVersion, new {@class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1"})
+                @Html.ValidationMessageFor(m => m.FimwareVersion)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.BankAccountId, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.BankAccountId)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.SurchargeAmountFee, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.SurchargeAmountFee, new {@class = "form-control", autofocus = "autofocus", placeholder = ""})
+                @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.SurchargePercentageFee, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.SurchargePercentageFee, new {@class = "form-control", autofocus = "autofocus", placeholder = "%"})
+                @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.SurchargeType, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.EnumDropDownListFor(m => m.SurchargeType, "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.SurchargeType)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.WhoInitiates, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.EnumDropDownListFor(m => m.WhoInitiates, "", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.WhoInitiates)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.CryptoPercentChargeAmount, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.CryptoPercentChargeAmount, new {@class = "form-control", autofocus = "autofocus", placeholder = "4.99"})
+                @Html.ValidationMessageFor(m => m.CryptoPercentChargeAmount)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.InstalledDate, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.InstalledDate, "{0:d MMM yyyy}", new {@class = "form-control", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date"})
+                @Html.ValidationMessageFor(m => m.InstalledDate)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.LoadedBy, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.LoadedBy, new {@class = "form-control", autofocus = "autofocus", placeholder = "Leo"})
+                @Html.ValidationMessageFor(m => m.LoadedBy)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Balance, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Balance, new {@class = "form-control", autofocus = "autofocus", placeholder = "1500"})
+                @Html.ValidationMessageFor(m => m.Balance)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.MinAmmountCash, new {@class = "col-lg-2 control-label"})
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.MinAmmountCash, new {@class = "form-control", autofocus = "autofocus", placeholder = "300"})
+                @Html.ValidationMessageFor(m => m.MinAmmountCash)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    }
+</div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/bundles/xpopulate")
     }
+
+*@
