--- a/OctagonPlatform/Octagon/assets/css/styles-1.css
+++ b/OctagonPlatform/Octagon/assets/css/styles-1.css
@@ -84,3 +84,10 @@ a:hover, a:focus {
             align-content: flex-end;
         }
     }
+
+hr.style13 {
+    height: 10px;
+    border: 0;
+    box-shadow: 0 10px 10px -10px #8c8b8b inset;
+    width: 100%;
+}
