--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -84,8 +84,8 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
 
 <div id="promo">
     <div class="jumbotron">
-        <h1 style="color:rgb(171,160,160);">OCTAGON </h1>
-        <p style="font-family:Raleway, sans-serif;">The Future is Here</p>
+        <h1 style="color:rgb(120, 214, 249);">OCTAGON </h1>
+        <p style="color:rgb(129,124,124); " font-family:Helvetica, 'Helvetica Neue'">The Future is Here</p>
         <p></p><a class="btn btn-default" role="button" href="#">Learn more</a>
     </div>
 </div>
@@ -114,7 +114,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
             </a>
         </div>
     </div>
-    <hr />
+    <hr>
 </div>
 <div class="container-fluid" id="container-fluid">
     <div class="embed-responsive embed-responsive-16by9">
