--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -35,65 +35,69 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Status)
+                @Html.LabelFor(m => m.Status, new { @class = "col-lg-2 control-label" })
                 <div class="col-lg-10">
                     @Html.EnumDropDownListFor(m => m.Status, "", new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.Status)
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Address1)
+                @Html.LabelFor(m => m.Address1, new { @class = "col-lg-2 control-label" })
                 <div class="col-lg-10">
                     @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "124 SW 105 Ave" })
                     @Html.ValidationMessageFor(m => m.Address1)
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Address2)
+                @Html.LabelFor(m => m.Address2, new { @class = "col-lg-2 control-label" })
                 <div class="col-lg-10">
                     @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", placeholder = "Apto 203" })
                     @Html.ValidationMessageFor(m => m.Address2)
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Zip)
+                @Html.LabelFor(m => m.Zip, new { @class = "col-lg-2 control-label" })
                 <div class="col-lg-10">
                     @Html.TextBoxFor(m => m.Zip, new { @class = "form-control", autofocus = "autofocus", placeholder = "33181" })
                     @Html.ValidationMessageFor(m => m.Zip)
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.LocationTypeId)
-                @Html.DropDownListFor(m => m.LocationTypeId, new SelectList(Model.LocationTypes, "Id", "Name"), "", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.LocationTypeId)
+                @Html.LabelFor(m => m.LocationTypeId, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.DropDownListFor(m => m.LocationTypeId, new SelectList(Model.LocationTypes, "Id", "Name"), "", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.LocationTypeId)
+                </div>
             </div>
             <div class="form-group">
                 <div id="Countries">
-                    <label for="Countries">Country</label>
-                    <select required id="CountryId" name="CountryId" class="form-control">
-                        <option value="231">United States</option>
-                        @foreach (var item in Model.Countries)
-                        {
-                            <option value="@item.Id">@item.Name</option>
-                        }
-                    </select>
-                    @Html.ValidationMessageFor(m => m.CountryId)
-
+                    <label class="col-lg-2 control-label" for="Countries">Country</label>
+                    <div class="col-lg-10">
+                        <select required id="CountryId" name="CountryId" class="form-control">
+                            <option value="231">United States</option>
+                            @foreach (var item in Model.Countries)
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
+                        </select>
+                        @Html.ValidationMessageFor(m => m.CountryId)
+                    </div>
                 </div>
                 <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
             </div>
             <div class="form-group">
                 <div id="States">
-                    <label for="States">State</label>
-                    <select required id="StatesId" name="StateId" class="form-control">
-                        <option value="3930">Florida</option>
-                        @foreach (var item in Model.States)
-                        {
-                            <option value="@item.Id">@item.Name</option>
-                        }
-                    </select>
-                    @Html.ValidationMessageFor(m => m.StateId)
-
+                    <label class="col-lg-2 control-label" for="States">State</label>
+                    <div class="col-lg-10">
+                        <select required id="StatesId" name="StateId" class="form-control">
+                            <option value="3930">Florida</option>
+                            @foreach (var item in Model.States)
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
+                        </select>
+                        @Html.ValidationMessageFor(m => m.StateId)
+                    </div>
                 </div>
                 <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
             </div>
