--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -19,6 +19,11 @@
     terminalId = Model.TerminalId
 }, htmlAttributes: null)
 
+@Html.ActionLink(linkText: "Bind Key", actionName: "GetKey", controllerName: "Terminals", routeValues: new
+{
+    terminalId = Model.TerminalId
+}, htmlAttributes: null)
+
 
 <div class="row" id="detailterminal">
 
