--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -3,12 +3,9 @@
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-@Styles.Render("~/Content/bootstrap-lumen.css")
+@*@Styles.Render("~/Content/bootstrap-lumen.css")*@
 
 
-<br />
-<br />
-<br />
 <br />
 <br />
 
