--- a/OctagonPlatform/Views/Shared/Sections/Header.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Header.cshtml
@@ -38,6 +38,8 @@
 
 
 @Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
+@Styles.Render("~/Octagon/assets/css/sb-admin.css")
+@Styles.Render("~/Octagon/assets/css/sb-admin.min.css")
 @Styles.Render("~/Octagon/assets/vendor/metisMenu/metisMenu.min.css")
 @Styles.Render("~/Octagon/assets/vendor/dist/css/sb-admin-2.css")
 @Styles.Render("~/Octagon/assets/vendor/morrisjs/morris.css")
