--- a/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
@@ -3,7 +3,7 @@
 <head>
     @Html.Partial("Sections/Header")
 </head>
-<body>
+<body class="fixed-nav sticky-footer">
     <div id="wrapper">
         <!-- Navigation -->
         @Html.Partial("Sections/NavBar")
