--- a/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Serial2)
-            @Html.TextBoxFor(m => m.Serial2, new {  @class = "form-control", placeholder = "serial 2" })
+            @Html.TextBoxFor(m => m.Serial2, new { @class = "form-control", placeholder = "serial 2" })
             @Html.ValidationMessageFor(m => m.Serial2)
         </div>
     </div>
@@ -28,7 +28,41 @@
 
     </div>
 }
-<h2>BindKey</h2>
-<div>jjjjj
-    @ViewBag.Key
+<h2>Current Terminal Key Information</h2>
+
+<div class="row">
+    <table>
+        <tr>
+            <td>Serial number 1:</td>
+            <td>
+                @Html.Label(Model.Serial1)
+            </td>
+            <td>Check Digit 1:</td>
+            <td>@ViewBag.ChkDigt1</td>
+        </tr>
+        <tr>
+            <td>Serial number 2:</td>
+            <td>@Html.Label(Model.Serial2)</td>
+            <td>Check Digit 2:</td>
+            <td>@ViewBag.ChkDigt2</td>
+        </tr>
+        <tr>
+            <td>Encripytion Type</td>
+            <td>Triple DES</td>
+            <td>ATM Check Digit</td>
+            <td>@ViewBag.AtmChkDigt</td>
+        </tr>
+
+        <tr>
+            <td>Date Bound:</td>
+            <td>@DateTime.Now</td>
+        </tr>
+    </table>
 </div>
+
+
+
+
+
+
+
