--- a/OctagonPlatform/Views/Shared/Error.cshtml
+++ b/OctagonPlatform/Views/Shared/Error.cshtml
@@ -2,5 +2,14 @@
     ViewBag.Title = "Error";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
-<h1 class="alert-info">@ViewBag.Error.</h1>
-<h3 class="alert-danger">@ViewBag.Error</h3>
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="form-group">
+    <h2 class="alert-danger">@ViewBag.Error. </h2>
+</div>
+<div class="form-group">
+    <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:red">Back</button>
+</div>
