--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -89,9 +89,10 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
         <p></p><a class="btn btn-default" role="button" href="#">Learn more</a>
     </div>
 </div>
+<hr>
 <div class="container site-section" id="middle">
-    <hr />
-    <h1 style="color:rgb(129,124,124);">OCTAGON </h1>
+    
+    <h1 style="color:rgb(129,124,124);"> </h1>
     <p>&nbsp;</p>
     <div class="row" style="background-color:rgba(255,255,255,0.247059);">
         <div class="col-md-4">
@@ -114,14 +115,14 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
             </a>
         </div>
     </div>
-    <hr>
 </div>
 <div class="container-fluid" id="container-fluid">
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MtCMtC50gwY" id="video" style="margin:17px;padding:-7px;background-color:#6bb1f2;"></iframe>
     </div>
 
-    <hr>
+    <br>
+    <br>
     <div class="container">
         <a id="contact"> </a>
         <div class="modal fade" role="dialog" tabindex="-1" id="modal1">
@@ -176,7 +177,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                                 <input class="form-control" type="text" name="from_phone" placeholder="Primary Phone" id="from_phone" />
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6" style="padding-top: 9px;">
                             <div class="form-group">
                                 <label class="control-label" for="calltime">Best Time to Call</label>
                                 <select class="form-control" name="Call Time" id="calltime">
