--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -103,15 +103,17 @@
             </div>
             <div class="form-group">
                 <div id="Cities">
-                    <label for="Cities">City</label>
-                    <select id="CitiesId" name="CityId" class="form-control">
-                        <option value="43769">Miami</option>
-                        @foreach (var item in Model.Cities)
-                        {
-                            <option value="@item.Id">@item.Name</option>
-                        }
-                    </select>
-                    @Html.ValidationMessageFor(m => m.CityId)
+                    <label class="col-lg-2 control-label" for="Cities">City</label>
+                    <div class="col-lg-10">
+                        <select id="CitiesId" name="CityId" class="form-control">
+                            <option value="43769">Miami</option>
+                            @foreach (var item in Model.Cities)
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
+                        </select>
+                        @Html.ValidationMessageFor(m => m.CityId)
+                    </div>
                 </div>
                 <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
             </div>
